# for_hatenablog

./: .gitignore  gitignore  init.R
Clustering_Binary_Data/: README.html  README.md
Clustering_Binary_Data/03_source/: data_create.R  data_generate.R  hclust_for_binarydata.R  kmeans_for_binarydata.R
Lasso_Trial/: Data_Creation.R  Lasso_random_challenge.R  UseData.csv
MMM_parameter_consistency_test/: .gitignore  requirements.txt
R_Advent_Calendar_2020/: Blog_article.md
R_Advent_Calendar_2022/: .gitignore  Pipfile  blog_article.md  blog_article02.html  blog_article02.tex
R_Advent_Calendar_2025/: example.R  monte_carlo.R
R_Advent_Calendar_2025/debug/: debug.r  (+1 more)
R_Advent_Calender/: Blog_Article.Rmd  Blog_article.md
R_in_VSCode/: Test.R  data_load.R  group_by_summarise.R
calc_programs/: calucandprogram.py
dummies_tutorial/: .RData  .Rhistory  Dummies_Trial.R  tidy_one_hot_encoding.R
l1_reguralization/: Pipfile  requirements.txt
python_LMMM_trial/: .gitignore  Pipfile  Readme.md
quantumblack_causalnex/: .gitignore  Pipfile  README.md
regression_cramer_rao/: src.R
rstan_training/: 02_stan_code.stan  mcmc_sampling.R
stan_hierarchical_model/: .gitignore  hierarchical_stan.stan  model.R
sudoku_webapp/: README.md  __init__.py  app.py  pyproject.toml  sudoku_generator.py  sudoku_solver.py
sudoku_webapp/static/css/: style.css
sudoku_webapp/static/js/: sudoku.js
sudoku_webapp/templates/: index.html
sudoku_webapp/tests/: test_sudoku.py
tiral_GA2M/: GA2M_for_BostonPrice.ipynb  GA2M_for_BostonPrice.py
trial_GA2M/: Wu_Stephen.html  Wu_Stephen.md
(+58 files in other folders)
